[project]
name = "comfyui_preset_merger"
description = "Nodes: ModelMergeByPreset. Merge checkpoint models by preset"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/WASasquatch/ComfyUI_Preset_Merger"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "was"
DisplayName = "ComfyUI_Preset_Merger"
Icon = ""
